objects/vlocity_ins__QuotePricingAdjustment__c.object
<CustomObject>
    <description>Represents the itemized tax and fee list entry amount  on a policy quote and optionally a QuoteLineItem. Master-detail child object of Quote.</description>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <description>The action requested in this quote for this price, charge or adjustment with values such as Add, Change, Disconnect, Existing. Existing means no change requested.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AddedByUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the user who added this price, charge or adjustment; typically for write-in price adjustments.</description>
        <label>Added By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AdjustmentType__c</fullName>
        <description>Type of associated price list entry.</description>
        <label>Adjustment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AdjustmentValue__c</fullName>
        <description>For write-in percentage adjustments, the percentage value of the adjustment. For example, 5 for a 5% discount. This value is null for pricing using a selected pricing element since the adjustment value is defined by the selected pricing element.</description>
        <label>Adjustment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <description>For write-in prices, the new or overriding amount. For example, $100 USD. This value is null for pricing using a selected pricing element since the pricing amount is defined by the selected pricing element.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AppliesTo__c</fullName>
        <description>Identifies to what the price, charge or adjustment will be applied: to a specific asset, to multiple assets, to a contract or to an account.</description>
        <label>Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Multiple Assets</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the account with billing/charging responsibility to which the price, charge or adjustment is applied.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>QuotePricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EstimatedEndDate__c</fullName>
        <description>Estimated end date of this price, charge or adjustment given the request date.</description>
        <label>Estimated End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EstimatedStartDate__c</fullName>
        <description>Estimated start date of this price, charge or adjustment given the request date.</description>
        <label>Estimated Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FulfilmentStatus__c</fullName>
        <description>The status of fulfillment of this price, charge or adjustment with values such as Draft, In Progress, Activated, Superseded, Cancelled, Point of No Return, Pending.</description>
        <label>Fulfilment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>PONR</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__OverrideDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Definition</label>
        <referenceTo>vlocity_ins__OverrideDefinition__c</referenceTo>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price list entry used to calculate the amount.</description>
        <label>Tax/Fee Id</label>
        <referenceTo>vlocity_ins__PriceListEntry__c</referenceTo>
        <relationshipLabel>Quote Pricing Adjustments</relationshipLabel>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListEntryName__c</fullName>
        <description>Name of price list entry used to calculate the amount.</description>
        <formula>vlocity_ins__PriceListEntryId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax/Fee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingElementGlobalKey__c</fullName>
        <description>For selected prices, charges or adjustments, the global key identifier of the selected pricing element. This global key reference is used to point to the currently active pricing element version among all the versions of this pricing element.</description>
        <externalId>true</externalId>
        <label>Pricing Element Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingElementVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For selected prices, charges or adjustments, this identifies the pricing element version at the time it was selected.</description>
        <label>Pricing Element Version</label>
        <referenceTo>vlocity_ins__PricingElement__c</referenceTo>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingVariableCode__c</fullName>
        <description>Formula: The code of the price, charge or adjustment pricing variable. This value is null for pricing using a selected pricing element since that pricing variable is defined by the selected pricing element.</description>
        <formula>vlocity_ins__PricingVariableId__r.vlocity_ins__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Variable Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingVariableId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the price, charge or adjustment pricing variable. Used for write-in price adjustments to identify the kind of price, charge or adjustment. This value is null for pricing using a selected pricing element since the pricing variable is defined by the selected pricing element.</description>
        <label>Pricing Variable</label>
        <referenceTo>vlocity_ins__PricingVariable__c</referenceTo>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use the Applied Promotion (QuoteAppliedPromotionId__c) field to identify the promotion which is the source of this price or adjustment.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteAppliedPromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For promotional pricing, identifies the applied promotion which provides this pricing.</description>
        <label>Applied Promotion</label>
        <referenceTo>vlocity_ins__QuoteAppliedPromotion__c</referenceTo>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <description>Quote associated with itemized price list entry amount.</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the line item (therefore asset) to which the price, charge or adjustment will be applied. Used when the price, charge or adjustment is applied to a specific asset.</description>
        <label>Quote Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipName>QuotePricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestDate__c</fullName>
        <description>Date requested for the application or cancellation of the customer&apos;s participation in this promotion.</description>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <description>Sequence in which this promotion is applied to the customer&apos;s asset or assets. Used to properly calculate discounted pricing.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Source__c</fullName>
        <description>The source of this price, charge or adjustment such as &quot;Agent&quot; for write-in adjustments, &quot;Promotion&quot; for promotional pricing, or &quot;Offer&quot; for offer-specific pricing.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Policy Action</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubAction__c</fullName>
        <description>The sub-action requested in this quote for this price, charge or adjustment with values such as Move or Cancel.</description>
        <label>Sub Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_ins__TimePlan__c</referenceTo>
        <relationshipName>QuotePricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Policy</label>
        <referenceTo>vlocity_ins__TimePolicy__c</referenceTo>
        <relationshipName>QuotePricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote Pricing Adjustment</label>
    <nameField>
        <label>Quote Pricing Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Pricing Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__AdjustmentTypeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__AdjustmentType__c &lt;&gt; vlocity_ins__PriceListEntryId__r.vlocity_ins__Type__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__AdjustmentType__c</errorDisplayField>
        <errorMessage>Adjustment Type field must be equal to the Type field on the Price List Entry.</errorMessage>
    </validationRules>
</CustomObject>